--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -12,20 +12,20 @@ jobs:
     runs-on: ubuntu-latest
     container: python:3.9-slim
 
-    # Requiired services    
+     Requiired services    
     services:
-      # Label used to access the service container
+       Label used to access the service container
       redis:
-        # Docker Hub image
+         Docker Hub image
         image: redis
-        # Set health checks to wait until redis has started
+         Set health checks to wait until redis has started
         options: >-
           --health-cmd "redis-cli ping"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
 
-    # Steps for the build
+     Steps for the build
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -37,9 +37,9 @@ jobs:
 
       - name: Linting
         run: |
-          # stop the build if there are Python syntax errors or undefined names
+           stop the build if there are Python syntax errors or undefined names
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+           exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
       - name: Run unit tests with nose
@@ -47,10 +47,10 @@ jobs:
         env:
           DATABASE_URI: "redis://redis:6379"
 
-      # Uncomment the following 2 lines during hands-on lab
+       Uncomment the following 2 lines during hands-on lab
       
-      # - name: Upload code coverage
-      #   uses: codecov/codecov-action@v2
-      #   with:
-      #     version: "v0.1.13"      
+       - name: Upload code coverage
+         uses: codecov/codecov-action@v2
+         with:
+           version: "v0.1.13"      
   
